--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <select id="category">
       <option value="sfw">SFW</option>
       <option value="mixednsfw">Mixed NSFW</option>
-      <option value="dontworrynsfw">Don’t worry NSFW</option>
+      <option value="dontworrynsfw">Worry NSFW</option>
     </select>
     <label>Question Type:</label>
     <select id="qtype">
