--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ let qtype = "number";
 let step = "playerQuestion";
 
 // Accent colors for categories
-const categoryColors = { sfw: '#1e88e5', mixednsfw:'#e53935', dontworrynsfw:'#fbc02d' };
+const categoryColors = { sfw: '#17585c', mixednsfw:'#172a5c', dontworrynsfw:'#37175c' };
 
 fetch('questions.json').then(r=>r.json()).then(data=>questions=data);
 
