--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="icon" type="image/png" href="play.png">
 <meta name="description" content="Each player gets a question and answers it in their head. Pass the device around. When everyone gets their question, they go around answering. DO NOT TALK UNTIL AFTER THE REAL QUESTION IS REVEALED. Then the real question is shown. Players guess who the imposter is. Justify your answer — even if you’re the imposter. Once the imposter is revealed, everyone shares their question. A moderator can view the real and imposter questions at the end.">
 <style>
-  :root {--accent-color: #1e88e5;}
+  :root {--accent-color: #17585c;}
   * {box-sizing: border-box;}
   body {
     font-family: Arial, sans-serif;
@@ -67,7 +67,7 @@
 <div class="container">
   <!-- Setup -->
   <div id="setup">
-    <h2>How to play:</h2>
+    <h2>That one game where you have to find out who has a different question | PennBrennFun</h2>
     <p>Each player will see a question and answer it in their head. Pass the device after each turn. After all players have seen their questions, discuss your answers aloud, then reveal the real and imposter questions.</p>
     <label>Category:</label>
     <select id="category">
