--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <label>Category:</label>
     <select id="category">
       <option value="sfw">SFW</option>
-      <option value="mixednsfw">Mixed NSFW</option>
-      <option value="dontworrynsfw">Don’t worry NSFW</option>
+      <option value="mixednsfw">Mixed</option>
+      <option value="dontworrynsfw">NSFW</option>
     </select>
     <label>Question Type:</label>
     <select id="qtype">
