--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!-- Setup -->
   <div id="setup">
     <h2>That one game where you have to find out who has a different question | PennBrennFun</h2>
-    <a href="https://www.pennbrenn.com/sites.html>SPennBrenn.com</a>
+    <p><a href="https://www.pennbrenn.com/sites.html">PennBrenn.com</a></p>
     <p>Each player will see a question and answer it in their head. Pass the device after each turn. After all players have seen their questions, discuss your answers aloud, then reveal the real and imposter questions.</p>
     <label>Category:</label>
     <select id="category">
