--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   body {
     font-family: Arial, sans-serif;
     margin:0; padding:0;
-    background:#121212;
-    color:#f0f0f0;
+    background:#000000;
+    color:#000000;
     display:flex;
     justify-content:center;
     align-items:center;
@@ -40,7 +40,7 @@
   }
   button {
     background: var(--accent-color);
-    color: #fff;
+    color: #ffffff;
     font-weight: bold;
     cursor: pointer;
     transition: background 0.3s;
@@ -48,7 +48,7 @@
   button:hover {opacity:0.9;}
   .hidden {display:none;}
   .question-box {
-    background:#1f1f1f;
+    background:#000000;
     padding:30px;
     border-radius:15px;
     margin:20px 0;
